--- a/Entrega3/frontend/src/styles.css
+++ b/Entrega3/frontend/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f2f5;
+    color: #333;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h2 {
+    color: #007bff;
+  }
+  
+  .container {
+    padding: 20px;
+  }
+  
