--- a/Entrega3/frontend/src/app/articulo/articulo-lista/articulo-lista.component.css
+++ b/Entrega3/frontend/src/app/articulo/articulo-lista/articulo-lista.component.css
@@ -24,4 +24,59 @@
   .ver-detalle:hover {
     text-decoration: underline;
   }
+  .articulo-lista-container {
+    margin: 20px;
+  }
+  
+  .search-bar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .search-bar input[type="text"] {
+    flex: 1;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10px;
+  }
+  
+  .search-bar button {
+    padding: 5px 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .search-bar button:hover {
+    background-color: #0056b3;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  li {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .ver-detalle {
+    display: block;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #007bff;
+  }
+  
+  .ver-detalle:hover {
+    text-decoration: underline;
+  }
   
