--- a/Entrega3/frontend/src/app/encabezado-app/encabezado/encabezado.component.html
+++ b/Entrega3/frontend/src/app/encabezado-app/encabezado/encabezado.component.html
@@ -1,19 +1,24 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div class="navbar-brand">
+    <img src="assets/logo.png" alt="Logo" class="logo">
+  </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#opciones">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <!-- enlaces -->
   <div class="collapse navbar-collapse" id="opciones">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/articulos']">Artículos</a>
+      </li>
+    </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/categorias">Categorias</a>
+        <a class="nav-link" [routerLink]="['/articulo/nuevo']">Crear Artículo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/tareas">Tareas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">Salir</a>
+        <a class="nav-link" (click)="logout()">Salir</a>
       </li>
     </ul>
   </div>
