--- a/Entrega3/frontend/src/app/encabezado-app/encabezado/encabezado.component.css
+++ b/Entrega3/frontend/src/app/encabezado-app/encabezado/encabezado.component.css
@@ -6,6 +6,7 @@
   .navbar-nav .nav-item .nav-link {
     color: #007bff;
     cursor: pointer;
+    font-size: 1.25rem; /* Ajusta el tamaño de fuente aquí */
   }
   
   .navbar-nav .nav-item .nav-link:hover {
